frontend/test/should_pass/retype_020.grg
using attrib_model_001;

rule r {
	z:Node;
	optional {
		x:Node;
		alternative {
			Foo {
				u:Node;
				
				modify {
					y:NINT<z>;
				}
			}
			Bar {
				u:Node;
				
				modify {
					y:NINT<x>;
				}
			}
		}
		
		modify {
		}
	}
	
	modify {}
}

